2014/11/11
- RTSP port is configurable in RTSP Sink Filter

2014/11/06
- Added VirtualMic
- H264 Source fixes: can now read JM-encoded files

2014/11/05
- Added Opus decoder

2014/10/30
- BF in frameskipping filter. Not skipping control samples.

2014/10/28
- Added AAC support to RtspSinkFilter

2014/10/09
- Fixed bugs in PicInPicFilter. Can now be configured properly via property page. 
  Sub-picture dimension and position can be configured while playing.
   Output dimension can not be configured while output pin is connected.

2014/09/05 Version 1.2
- Added YUV444ToRGBFilter contributed by Thomas Houtekier. Thanks for the contribution Thomas!
- Added YUV444 support to YUV source filter.
- Added RtspSinkFilter to stream live capture video using LiveMediaExt library.
- Frameskipping filter can now skip x out of every y frames to achieve desired frame rates.
- Build system has been changed to CMake. Existing VS projects are deprecated and will no longer be maintained.
- Updated RtspSourceFilter to use latest live555 (2014.07.25). Updated RTSP client to use new async interface provided by live555.

2014/08/14
- Changed build system to Cmake

2013/10/23 - Version 1.1.0
- Added Stereo2Mono filter
- Updated H.264 codec to include many bug-fixes and compatibility changes
- H264 Encoder can now output MEDIASUBTYPE_AVC
- H264 Source parses parameter sets on IFileSourceFilter::Load
- RTSP supports H.264 video and AAC audio

2010/11/03
- Added AudioMixingFilter alpha version
- Corrected VS project build dependencies thanks to a hint from jamiefaye

2010/10/28
- Added FramerateDisplayFilter alpha version

2010/10/09
Thanks to John Orr for the following fixes
- Fixed leaked handles in RtspSourceFilter
- Fixed incorrect assignment in RtspSourceFilter.cpp/RtspSourceFilter::GetCurFile()

2010/10/08
- Checked in live555 source code to make sure that RtspSourceFilter is built with correct live555 version.
- Simplified bat startup files